force-app/main/default/objects/Customer_Story__c/Customer_Story__c.object-meta.xml
<CustomObject>
    <description>Customer success stories - also used for partner story submission</description>
    <label>Customer Story</label>
    <nameField>
        <label>Customer Story Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>