force-app/main/default/objects/Customer_Story__c/fields/AppExchange_Apps_Partners__c.field-meta.xml
<CustomField>
    <fullName>AppExchange_Apps_Partners__c</fullName>
    <inlineHelpText>AppExchange Apps/Partners, e.g. FinancialForce, DocuSign, AirCall, etc</inlineHelpText>
    <label>AppExchange Apps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>