force-app/main/default/objects/Customer_Story__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>R3 Digital Approver</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>