force-app/main/default/objects/Customer_Story__c/fields/Customer_Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Model__c</fullName>
    <label>Customer Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>B2B &amp; B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>