force-app/main/default/objects/Customer_Story__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can Salesforce AEs mention the customer name in sales settings?</inlineHelpText>
    <label>Customer Name</label>
    <type>Checkbox</type>
</CustomField>