force-app/main/default/objects/Customer_Story__c/fields/Customer_Overview__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overview__c</fullName>
    <inlineHelpText>e.g. XYZ Company is a mid-market insurance carrier specializing in Commercial Property &amp; Casualty for agriculture. XYZ was faced with major disruption in their industry due to changing consumer needs and new competition from direct model challengers…etc.</inlineHelpText>
    <label>Customer Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>