force-app/main/default/objects/Customer_Story__c/fields/Email_of_reference_approver__c.field-meta.xml
<CustomField>
    <fullName>Email_of_reference_approver__c</fullName>
    <formula>Approver__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email of reference approver</label>
    <type>Text</type>
</CustomField>