force-app/main/default/objects/Customer_Story__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <inlineHelpText># of Employees</inlineHelpText>
    <label>Employees</label>
    <length>80</length>
    <type>Text</type>
</CustomField>