force-app/main/default/objects/Customer_Story__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>Submission_Date__c + 730</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer stories expire two years after publication by Salesforce</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>