force-app/main/default/objects/Customer_Story__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <inlineHelpText>Sage, Xero, ERP, etc</inlineHelpText>
    <label>Integrations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>