force-app/main/default/objects/Customer_Story__c/fields/Logo_Preview__c.field-meta.xml
<CustomField>
    <fullName>Logo_Preview__c</fullName>
    <formula>IMAGE(Logo_URL__c, &apos; No Image&apos;,50,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Preview</label>
    <type>Text</type>
</CustomField>