force-app/main/default/objects/Customer_Story__c/fields/Name_of_reference_approver__c.field-meta.xml
<CustomField>
    <fullName>Name_of_reference_approver__c</fullName>
    <formula>Approver__r.FirstName + &apos; &apos; + Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of reference approver</label>
    <type>Text</type>
</CustomField>