force-app/main/default/objects/Customer_Story__c/fields/Previous_Technology__c.field-meta.xml
<CustomField>
    <fullName>Previous_Technology__c</fullName>
    <inlineHelpText>Previous technology replaced by Salesforce</inlineHelpText>
    <label>Previous Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>