force-app/main/default/objects/Customer_Story__c/fields/Quantitative_Results__c.field-meta.xml
<CustomField>
    <fullName>Quantitative_Results__c</fullName>
    <inlineHelpText>Please provide quantitative results (% increase in sales productivity, % increase in revenue, % decrease in # of inbound calls, etc.)</inlineHelpText>
    <label>Quantitative Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>