force-app/main/default/objects/Customer_Story__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this customer willing to act as a reference customer for prospects?</inlineHelpText>
    <label>Reference?</label>
    <type>Checkbox</type>
</CustomField>