force-app/main/default/objects/Customer_Story__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>