force-app/main/default/objects/Customer_Story__c/fields/Salesforce_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Competitors__c</fullName>
    <inlineHelpText>Competitors of Salesforce engaged in sales cycle</inlineHelpText>
    <label>Salesforce Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>