force-app/main/default/objects/Customer_Story__c/fields/Salesforce_Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product_Features__c</fullName>
    <label>Salesforce Product Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>