force-app/main/default/objects/Customer_Story__c/fields/Salesforce_Products_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Products_Deployed__c</fullName>
    <inlineHelpText>e.g. Sales Cloud, Service Cloud, Pardot, etc</inlineHelpText>
    <label>Salesforce Products Deployed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>