force-app/main/default/objects/Customer_Story__c/fields/Salesforce_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Status__c</fullName>
    <label>Salesforce Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Not to be submitted</fullName>
            </value>
            <value>
                <fullName>To be submitted</fullName>
            </value>
            <value>
                <fullName>Submitted to Salesforce</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>