force-app/main/default/objects/Customer_Story__c/fields/Screenshot_3_Preview__c.field-meta.xml
<CustomField>
    <fullName>Screenshot_3_Preview__c</fullName>
    <formula>IMAGE(Screenshot_3_URL__c , &apos; No Image&apos;, 50, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screenshot 3 Preview</label>
    <type>Text</type>
</CustomField>