force-app/main/default/objects/Customer_Story__c/fields/Screenshot_3_URL__c.field-meta.xml
<CustomField>
    <fullName>Screenshot_3_URL__c</fullName>
    <inlineHelpText>Screenshot of solution (if applicable)</inlineHelpText>
    <label>Screenshot 3 URL</label>
    <type>Url</type>
</CustomField>