force-app/main/default/objects/Customer_Story__c/fields/Service_Cloud_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Service_Cloud_Use_Cases__c</fullName>
    <inlineHelpText>If using Service Cloud, list use case (e.g. customer support, call center, field service, telesales, etc.)</inlineHelpText>
    <label>Service Cloud Use Cases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>