force-app/main/default/objects/Customer_Story__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>Please include specifics on how Salesforce products were implemented, etc.</inlineHelpText>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>