force-app/main/default/objects/Customer_Story__c/fields/Speak_at_events__c.field-meta.xml
<CustomField>
    <fullName>Speak_at_events__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would the customer be willing to speak at Dreamforce or other events?</inlineHelpText>
    <label>Speak at events?</label>
    <type>Checkbox</type>
</CustomField>