force-app/main/default/objects/Customer_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>R3 Approved</fullName>
            </value>
            <value>
                <fullName>Sent for Customer Approval</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>