force-app/main/default/objects/Customer_Story__c/fields/Story_and_Overview__c.field-meta.xml
<CustomField>
    <fullName>Story_and_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can Salesforce AEs share this story and overview slide in sales settings?</inlineHelpText>
    <label>Story and Overview?</label>
    <type>Checkbox</type>
</CustomField>