force-app/main/default/objects/Customer_Story__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <inlineHelpText>Date submitted to Salesforce</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>