force-app/main/default/objects/Customer_Story__c/fields/Title_of_reference_approver__c.field-meta.xml
<CustomField>
    <fullName>Title_of_reference_approver__c</fullName>
    <formula>Approver__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title of reference approver</label>
    <type>Text</type>
</CustomField>